examples/test/testpolicy13496.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13496
  namespace: namespace352
spec:
  podSelector:
    matchLabels:
      key16: value18
      key6: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key4: value15
          key40: value40
      podSelector:
        matchLabels:
          key30: value32
          key29: value27
